[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Fonts/VolumeSlider.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/VolumeSlider/MuteButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.207843, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[node name="MuteButton" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -29.0
margin_right = 66.0
margin_bottom = 29.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color_rect_hover_width = 32
color_rect_pressed_width = 64
rect_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[node name="ColorRectLeft" type="ColorRect" parent="."]
margin_bottom = 58.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.34902, 0.694118, 0.509804, 1 )

[node name="Button" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 58.0
rect_min_size = Vector2( 120, 58 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.2, 0.207843, 0.2, 1 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.796078, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.207843, 0.2, 1 )
toggle_mode = true
action_mode = 0
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectRight" type="ColorRect" parent="."]
margin_left = 120.0
margin_right = 120.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.34902, 0.694118, 0.509804, 1 )

[node name="ColorRectTween" type="Tween" parent="."]

[node name="SpawnTween" type="Tween" parent="."]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
